--- a/EatIdeasApp/View/Base.lproj/Main.storyboard
+++ b/EatIdeasApp/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ml7-Oc-UAd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kuR-VT-Uu9">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -26,7 +26,7 @@
                                 <rect key="frame" x="0.0" y="196.33333333333331" width="393" height="621.66666666666674"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="665" id="vOq-fx-fiA"/>
+                                    <constraint firstAttribute="height" constant="621.66666666666674" id="2wy-gU-rA2"/>
                                 </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Dish" id="lqX-Kq-hz6">
@@ -44,11 +44,9 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Kjr-Hh-mQV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="2M5-9q-NQM"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="kea-aL-zxq" secondAttribute="bottom" constant="707" id="BH2-kb-8DJ"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Kjr-Hh-mQV" secondAttribute="bottom" id="Pfc-aX-0G8"/>
-                            <constraint firstItem="Kjr-Hh-mQV" firstAttribute="top" secondItem="kea-aL-zxq" secondAttribute="bottom" constant="42" id="W7d-tQ-LCv"/>
+                            <constraint firstItem="Kjr-Hh-mQV" firstAttribute="top" secondItem="kea-aL-zxq" secondAttribute="bottom" constant="41.999999999999972" id="Dgj-w0-Xjd"/>
+                            <constraint firstItem="Kjr-Hh-mQV" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="eVH-N3-WWE"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Kjr-Hh-mQV" secondAttribute="trailing" id="fIQ-jc-5zT"/>
-                            <constraint firstItem="kea-aL-zxq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="31" id="klZ-id-16D"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kea-aL-zxq" secondAttribute="trailing" constant="176" id="mLM-yU-kJK"/>
                             <constraint firstItem="kea-aL-zxq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="175" id="t8H-HP-GqW"/>
                         </constraints>
@@ -61,7 +59,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1061.8320610687022" y="3.5211267605633805"/>
+            <point key="canvasLocation" x="2913.740458015267" y="3.5211267605633805"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="Gc9-92-nkS">
@@ -77,8 +75,50 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1NV-pC-LmW">
                                         <rect key="frame" x="0.0" y="0.0" width="393" height="1200"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Sample text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kS6-Xk-EDm">
-                                                <rect key="frame" x="175" y="144" width="90" height="21"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Sample text" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kS6-Xk-EDm">
+                                                <rect key="frame" x="56" y="144" width="279" height="20"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Ready in:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bjq-tP-Om0">
+                                                <rect key="frame" x="56" y="213" width="161" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Lactose free:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nMM-n4-Xxc">
+                                                <rect key="frame" x="56" y="290" width="161" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Gluten free:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HJs-Cw-tCU">
+                                                <rect key="frame" x="56" y="381" width="161" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="vegan: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k4Y-9J-wbB">
+                                                <rect key="frame" x="56" y="463" width="161" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="vegetarian: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wqM-Dm-Xhg">
+                                                <rect key="frame" x="56" y="529" width="161" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Extended ingridients:" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B4K-m8-rDu">
+                                                <rect key="frame" x="56" y="590" width="198" height="21"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
@@ -112,30 +152,36 @@
                     <navigationItem key="navigationItem" id="Gtq-9d-QUX"/>
                     <size key="freeformSize" width="393" height="1250"/>
                     <connections>
+                        <outlet property="extendedIngridientsLabel" destination="B4K-m8-rDu" id="g2q-13-zBE"/>
+                        <outlet property="glutenFreeLabel" destination="HJs-Cw-tCU" id="1lh-Bk-J4H"/>
                         <outlet property="idText" destination="kS6-Xk-EDm" id="FXt-yv-36q"/>
+                        <outlet property="lactoseFreeLabel" destination="nMM-n4-Xxc" id="30r-8G-3zX"/>
+                        <outlet property="readyInLabel" destination="bjq-tP-Om0" id="zXC-ym-D8i"/>
+                        <outlet property="veganLabel" destination="k4Y-9J-wbB" id="bpd-C3-vrR"/>
+                        <outlet property="vegetarianLabel" destination="wqM-Dm-Xhg" id="nqn-wT-N5f"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kl5-rz-SBE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2150.3816793893129" y="-20.422535211267608"/>
+            <point key="canvasLocation" x="4002.2900763358775" y="-20.422535211267608"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="Kn0-0V-3dH">
+        <scene sceneID="ycp-77-nib">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ml7-Oc-UAd" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kuR-VT-Uu9" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="u0o-wC-hmv">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hg5-aH-bLg">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="KZA-7H-uMk"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="M1I-bu-ngc"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Xhp-sX-GZF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WZS-Zk-mQH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="135.1145038167939" y="3.5211267605633805"/>
+            <point key="canvasLocation" x="1987.0229007633586" y="3.5211267605633805"/>
         </scene>
     </scenes>
     <resources>
