--- a/EatIdeasApp/View/Base.lproj/Main.storyboard
+++ b/EatIdeasApp/View/Base.lproj/Main.storyboard
@@ -124,6 +124,41 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="vEV-nt-uig">
+                                                <rect key="frame" x="0.0" y="680" width="393" height="533"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <color key="backgroundColor" red="0.6358601451" green="0.51668185" blue="0.36665350200000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <prototypes>
+                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="Ingridient" textLabel="d0o-2w-MdY" style="IBUITableViewCellStyleDefault" id="bck-yh-bhR">
+                                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
+                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bck-yh-bhR" id="OLm-J1-leT">
+                                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                            <subviews>
+                                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="d0o-2w-MdY">
+                                                                    <rect key="frame" x="20" y="0.0" width="353" height="43.666667938232422"/>
+                                                                    <autoresizingMask key="autoresizingMask"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </tableViewCellContentView>
+                                                        <color key="backgroundColor" red="0.6358601451" green="0.51668185" blue="0.36665350200000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    </tableViewCell>
+                                                </prototypes>
+                                            </tableView>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m6o-zM-vqZ">
+                                                <rect key="frame" x="291" y="205" width="44" height="36"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" backgroundImage="heart.fill" catalog="system"/>
+                                                <connections>
+                                                    <action selector="favouriteButtonPressed:" destination="HJ0-e6-ahz" eventType="touchUpInside" id="Bh7-my-p2a"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBrownColor"/>
                                         <constraints>
@@ -153,10 +188,12 @@
                     <size key="freeformSize" width="393" height="1250"/>
                     <connections>
                         <outlet property="extendedIngridientsLabel" destination="B4K-m8-rDu" id="g2q-13-zBE"/>
+                        <outlet property="favouriteButton" destination="m6o-zM-vqZ" id="6vw-7w-c2R"/>
                         <outlet property="glutenFreeLabel" destination="HJs-Cw-tCU" id="1lh-Bk-J4H"/>
                         <outlet property="idText" destination="kS6-Xk-EDm" id="FXt-yv-36q"/>
                         <outlet property="lactoseFreeLabel" destination="nMM-n4-Xxc" id="30r-8G-3zX"/>
                         <outlet property="readyInLabel" destination="bjq-tP-Om0" id="zXC-ym-D8i"/>
+                        <outlet property="tableView" destination="vEV-nt-uig" id="yli-NY-llf"/>
                         <outlet property="veganLabel" destination="k4Y-9J-wbB" id="bpd-C3-vrR"/>
                         <outlet property="vegetarianLabel" destination="wqM-Dm-Xhg" id="nqn-wT-N5f"/>
                     </connections>
@@ -185,6 +222,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="heart.fill" catalog="system" width="128" height="107"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
