--- a/EatIdeasApp/View/Base.lproj/Main.storyboard
+++ b/EatIdeasApp/View/Base.lproj/Main.storyboard
@@ -159,6 +159,10 @@
                                                     <action selector="favouriteButtonPressed:" destination="HJ0-e6-ahz" eventType="touchUpInside" id="Bh7-my-p2a"/>
                                                 </connections>
                                             </button>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fK9-zq-G74">
+                                                <rect key="frame" x="202" y="154" width="176" height="86"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            </imageView>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBrownColor"/>
                                         <constraints>
@@ -187,6 +191,7 @@
                     <navigationItem key="navigationItem" id="Gtq-9d-QUX"/>
                     <size key="freeformSize" width="393" height="1250"/>
                     <connections>
+                        <outlet property="dishImage" destination="fK9-zq-G74" id="DMm-eL-sWb"/>
                         <outlet property="extendedIngridientsLabel" destination="B4K-m8-rDu" id="g2q-13-zBE"/>
                         <outlet property="favouriteButton" destination="m6o-zM-vqZ" id="6vw-7w-c2R"/>
                         <outlet property="glutenFreeLabel" destination="HJs-Cw-tCU" id="1lh-Bk-J4H"/>
